--- a/index.html
+++ b/index.html
@@ -1,31 +1,76 @@
 <!DOCTYPE html>
 
 <html>
-   <head>
-      <title> My Web Page </title>
-   </head>
-    <body> 
-      <p>
-         <strong> Introduction to Information Systems </strong>
-      </p> 
-      <p> 
-         <em>
-          Naci Toygun Görmüş
-          <br>
-          150210719
-         </em>
-      </p>
-      <p> Evolution of homo species </p>
-      <ul>
-         <li> Homo habilis (able man) </li>
-         <li> Homo erectus (upright man) </li>
-         <li> Homo neanderthalensis </li>
-         <li> Homo floresiensis (hobbit) </li>
-         <li> Homo sapiens (wisw man) </li>
+
+<head>
+   <title> My Web Page </title>
+</head>
+
+<body>
+   <p>
+      <strong> Introduction to Information Systems </strong>
+   </p>
+   <p>
+      <em>
+         Naci Toygun Görmüş
+         <br>
+         150210719
+      </em>
+   </p>
+   <p> Evolution of homo species </p>
+   <ul>
+      <li> Homo habilis (able man) </li>
+      <li> Homo erectus (upright man) </li>
+      <li> Homo neanderthalensis </li>
+      <li> Homo floresiensis (hobbit) </li>
+      <li> Homo sapiens (wisw man) </li>
       <ul>
          <li> Homo sapiens sapiens </li>
       </ul>
-      </ul>
-    
-    </body>
+   </ul>
+   <h1> <strong> Human Evolution </strong> </h1>
+   <p> <img src="evolution-diagram.png"> </p>
+   <p> You can find the image below.
+      <a href=" https://www.biologyonline.com/dictionary/homo-sapiens-sapiens">
+      </a>
+   </p>
+   <h2><strong> The Clickable Image </strong></h2>
+   <p> This image is clickable, click on it and try it.
+      <a href=" https://www.biologyonline.com/dictionary/homo-sapiens-sapiens">
+         <img src="evolution-diagram.png">
+      </a>
+   </p>
+   <table>
+      <tr>
+         <th> Homo habilis </th>
+         <th> Homo erectus </th>
+         <th> Homo neanderthalensis </th>
+         <th> Homo sapiens </th>
+      </tr>
+      <tr>
+         <td> Handy man </td>
+         <td> Upright man </td>
+         <td> Neandertal </td>
+         <td> Wise man </td>
+      </tr>
+      <tr>
+         <td> ∼2.3–1.65 million years ago </td>
+         <td> ∼2 million years ago </td>
+         <td> ∼40,000 years ago </td>
+         <td> ∼13.000 years ago to today </td>
+      </tr>
+   </table>
+   <pre>                    What are homo sapiens?
+Homo sapiens is the species of all the highly developed primates on earth,
+a category that living humans belong to.
+These primates include humans,
+           apes,
+           lorises,
+           tarsiers,
+           lemurs,
+           monkeys.
+
+  </pre>
+</body>
+
 </html>
