--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
 
 <head>
    <title> My Web Page </title>
-   <link rel="stylesheet" type="text/css" href="./all.css"/>
+   <style type="text/css">
+      h1 {
+           color: red;
+           font-size: 24pt;
+           text-decoration: underline;
+           font-family: Tahoma, Helvetica, sans-serif; 
+         }
+     
+      em {
+          font-style: normal;
+          color: green;
+          background-color: lightgrey;
+          font-weight: bold;
+          }
+    </style>
 </head>
 
 <body>
