--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
           background-color: lightgrey;
           font-weight: bold;
           }
+      ul {
+         list-style-type: square;
+         }    
     </style>
 </head>
 
