--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
    <title> My Web Page </title>
    <style type="text/css">
       h1 {
+           text-align: center;
+           border: thick solid red;
+           text-decoration: none;
+           padding: 1ex;
+           width: 50%;
            color: red;
            font-size: 24pt;
            text-decoration: underline;
@@ -21,6 +26,21 @@
       ul {
          list-style-type: square;
          }    
+      a:hover {
+       text-decoration: none;
+        }
+      li:first-child { 
+       border: thick solid green;
+       margin-bottom: 1em;
+       margin-top: 1em;
+       padding: 1ex;
+       width: 40%;
+        }
+     p.centered {
+       text-align: center;
+       width: 50%
+      }
+
     </style>
 </head>
 
@@ -28,7 +48,7 @@
    <p>
       <strong> Introduction to Information Systems </strong>
    </p>
-   <p>
+   <p class="centered">
       <em>
          Naci Toygun Görmüş
          <br>
